make some minor changes in active orders